--- a/package.json
+++ b/package.json
@@ -9,8 +9,11 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/preact": "^4.0.10",
+    "@nanostores/preact": "^1.0.0",
     "@tailwindcss/vite": "^4.1.4",
     "astro": "^5.7.5",
+    "preact-router": "^4.1.2",
     "tailwindcss": "^4.1.4"
   }
 }
